--- a/src/Bookstore.Service/Bookstore.Service.csproj
+++ b/src/Bookstore.Service/Bookstore.Service.csproj
@@ -5,9 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.3" />
-    <PackageReference Include="OrchardCore.Localization.Core" Version="1.0.0-rc2-13450" />
-    <PackageReference Include="NLog.Web.AspNetCore" Version="4.9.*" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.11" />
+    <PackageReference Include="OrchardCore.Localization.Core" Version="1.1.0" />
+    <PackageReference Include="NLog.Web.AspNetCore" Version="4.14.0" />
     <PackageReference Include="NLog" Version="4.7.*" />
     <PackageReference Include="Rhetos.CommonConcepts" Version="5.0.0-dev*" />
     <PackageReference Include="Rhetos.Host.AspNet.Impersonation" Version="5.0.0-dev*" />
@@ -17,7 +17,7 @@
     <PackageReference Include="Rhetos.MSBuild" Version="5.0.0-dev*" />
     <PackageReference Include="Rhetos.RestGenerator" Version="5.0.0-dev*" />
     <PackageReference Include="Rhetos" Version="5.0.0-dev*" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
   <ItemGroup>
