Localization example in English, for message customization, even if other languages are not needed.

--- a/src/Bookstore.Service/Bookstore.Service.csproj
+++ b/src/Bookstore.Service/Bookstore.Service.csproj
@@ -25,7 +25,7 @@
   </ItemGroup>
   
   <ItemGroup>
-    <None Update="Localization\hr.po">
+    <None Update="Localization\en.po">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="rhetos-app.local.settings.json">
