--- a/test/Bookstore.Service.Test/Bookstore.Service.Test.csproj
+++ b/test/Bookstore.Service.Test/Bookstore.Service.Test.csproj
@@ -9,7 +9,10 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.7.1" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.1.1" />
     <PackageReference Include="MSTest.TestFramework" Version="2.1.1" />
-    <PackageReference Include="coverlet.collector" Version="1.3.0" />
+    <PackageReference Include="coverlet.collector" Version="3.1.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Rhetos.TestCommon" Version="5.0.0-dev*" />
   </ItemGroup>
   
