Renamed Bookstore.Concepts to Bookstore.RhetosExtensions, the new name is more obvious for developers.

--- a/src/Bookstore.Service/Bookstore.Service.csproj
+++ b/src/Bookstore.Service/Bookstore.Service.csproj
@@ -21,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Bookstore.Concepts\Bookstore.Concepts.csproj" />
+    <ProjectReference Include="..\Bookstore.RhetosExtensions\Bookstore.RhetosExtensions.csproj" />
   </ItemGroup>
   
   <ItemGroup>
