Example of console log setup for debugging authentication and authorization.

--- a/src/Bookstore.Service/appsettings.json
+++ b/src/Bookstore.Service/appsettings.json
@@ -4,6 +4,13 @@
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
+    },
+    "Console": {
+      "LogLevel": {
+        //"ImpersonationService": "Trace",
+        //"AuthorizationManager": "Trace",
+        //"CommonAuthorizationProvider": "Trace"
+      }
     }
   },
   "AllowedHosts": "*",
