--- a/src/Bookstore.Service/Bookstore.Service.csproj
+++ b/src/Bookstore.Service/Bookstore.Service.csproj
@@ -113,6 +113,9 @@
     <PackageReference Include="Rhetos.CommonConcepts">
       <Version>4.3.0</Version>
     </PackageReference>
+    <PackageReference Include="Rhetos.LanguageServicesCompatibility">
+      <Version>1.0.0</Version>
+    </PackageReference>
     <PackageReference Include="Rhetos.RestGenerator">
       <Version>4.0.0</Version>
     </PackageReference>
