Added AddAspNetFormsAuth package.
# Conflicts:
#	src/Bookstore.Service/Bookstore.Service.csproj

--- a/src/Bookstore.Service/appsettings.json
+++ b/src/Bookstore.Service/appsettings.json
@@ -16,7 +16,7 @@
   "AllowedHosts": "*",
   "Rhetos": {
     "AppSecurity": {
-      "AllClaimsForAnonymous": true
+      "AllClaimsForAnonymous": false
     },
     "App": {
       "AuthorizationAddUnregisteredPrincipals": true
