--- a/src/Bookstore.Service/Bookstore.Service.csproj
+++ b/src/Bookstore.Service/Bookstore.Service.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="OrchardCore.Localization.Core" Version="1.1.0" />
     <PackageReference Include="NLog.Web.AspNetCore" Version="4.14.0" />
     <PackageReference Include="NLog" Version="4.7.*" />
+    <PackageReference Include="Rhetos.AspNetFormsAuth" Version="5.1.0-dev*" />
     <PackageReference Include="Rhetos.CommonConcepts" Version="5.1.0-dev*" />
     <PackageReference Include="Rhetos.Host.AspNet.Impersonation" Version="5.1.0-dev*" />
     <PackageReference Include="Rhetos.Host.AspNet" Version="5.1.0-dev*" />
