--- a/src/Bookstore.RhetosExtensions/Bookstore.RhetosExtensions.csproj
+++ b/src/Bookstore.RhetosExtensions/Bookstore.RhetosExtensions.csproj
@@ -5,8 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Rhetos" Version="5.0.0" />
-    <PackageReference Include="Rhetos.CommonConcepts" Version="5.0.0" />
+    <PackageReference Include="Rhetos" Version="5.1.0-dev*" />
+    <PackageReference Include="Rhetos.CommonConcepts" Version="5.1.0-dev*" />
   </ItemGroup>
 
 </Project>
