--- a/src/Bookstore.Service/Bookstore.Service.csproj
+++ b/src/Bookstore.Service/Bookstore.Service.csproj
@@ -25,6 +25,9 @@
   </ItemGroup>
   
   <ItemGroup>
+    <None Update="Localization\hr.po">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Localization\en.po">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
