--- a/src/Bookstore.Service/Bookstore.Service.csproj
+++ b/src/Bookstore.Service/Bookstore.Service.csproj
@@ -1,23 +1,24 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.11" />
-    <PackageReference Include="OrchardCore.Localization.Core" Version="1.1.0" />
-    <PackageReference Include="NLog.Web.AspNetCore" Version="4.14.0" />
-    <PackageReference Include="NLog" Version="4.7.*" />
-    <PackageReference Include="Rhetos.CommonConcepts" Version="5.4.0" />
-    <PackageReference Include="Rhetos.Host.AspNet.Impersonation" Version="5.1.0" />
-    <PackageReference Include="Rhetos.Host.AspNet" Version="5.4.0" />
-    <PackageReference Include="Rhetos.Host" Version="5.4.0" />
-    <PackageReference Include="Rhetos.Impersonation" Version="5.1.0" />
-    <PackageReference Include="Rhetos.MSBuild" Version="5.4.0" />
-    <PackageReference Include="Rhetos.RestGenerator" Version="5.1.0" />
-    <PackageReference Include="Rhetos" Version="5.4.0" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="8.0.1" />
+    <PackageReference Include="OrchardCore.Localization.Core" Version="1.8.1" />
+    <PackageReference Include="NLog.Web.AspNetCore" Version="5.3.8" />
+    <PackageReference Include="NLog" Version="5.2.8" />
+    <PackageReference Include="Rhetos.CommonConcepts" Version="6.0.0-dev24011711054c6feb" />
+    <PackageReference Include="Rhetos.Host.AspNet.Impersonation" Version="6.0.0-dev2401171225714f6f3" />
+    <PackageReference Include="Rhetos.Host.AspNet" Version="6.0.0-dev24011711054c6feb" />
+    <PackageReference Include="Rhetos.Host" Version="6.0.0-dev24011711054c6feb" />
+    <PackageReference Include="Rhetos.Impersonation" Version="6.0.0-dev2401171225714f6f3" />
+    <PackageReference Include="Rhetos.MSBuild" Version="6.0.0-dev24011711054c6feb" />
+    <PackageReference Include="Rhetos.MsSqlEf6" Version="6.0.0-dev24011711054c6feb" />
+    <PackageReference Include="Rhetos.RestGenerator" Version="6.0.0-dev24011711267bd4d47" />
+    <PackageReference Include="Rhetos" Version="6.0.0-dev24011711054c6feb" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
   <ItemGroup>
