--- a/src/Bookstore.Service/Bookstore.Service.csproj
+++ b/src/Bookstore.Service/Bookstore.Service.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="Rhetos.Host" Version="6.0.0-dev24011711054c6feb" />
     <PackageReference Include="Rhetos.Impersonation" Version="6.0.0-dev2401171225714f6f3" />
     <PackageReference Include="Rhetos.LightDMS" Version="6.0.0-dev24011717418aefdcf" />
+    <PackageReference Include="Rhetos.LogArchive" Version="4.0.0-dev240122172349beef8" />
     <PackageReference Include="Rhetos.MSBuild" Version="6.0.0-dev24011711054c6feb" />
     <PackageReference Include="Rhetos.MsSqlEf6" Version="6.0.0-dev24011711054c6feb" />
     <PackageReference Include="Rhetos.RestGenerator" Version="6.0.0-dev24011711267bd4d47" />
