--- a/src/Bookstore.RhetosExtensions/Bookstore.RhetosExtensions.csproj
+++ b/src/Bookstore.RhetosExtensions/Bookstore.RhetosExtensions.csproj
@@ -5,8 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Rhetos" Version="6.0.0-dev24011711054c6feb" />
-    <PackageReference Include="Rhetos.CommonConcepts" Version="6.0.0-dev24011711054c6feb" />
+    <PackageReference Include="Rhetos" Version="6.0.0" />
+    <PackageReference Include="Rhetos.CommonConcepts" Version="6.0.0" />
   </ItemGroup>
 
 </Project>
